--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body{
     position: fixed;
     top: 0px;
     border-radius: 0px 0px 30px 30px;
+    z-index: 1;
 }
 .amarelow{
     width: 150px;
@@ -34,4 +35,10 @@ body{
     position: absolute;
     left: 300px;
     top: 200px;
+    z-index: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-content: center;
+    align-items: center;
 }
