--- a/style.css
+++ b/style.css
@@ -21,24 +21,38 @@ body{
 }
 .bar{
     width: 80%;
-    height: 120px;
+    height: 80px;
     background-color: black;
     position: fixed;
     top: 0px;
     border-radius: 0px 0px 30px 30px;
     z-index: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
 }
 .amarelow{
-    width: 150px;
-    height: 400px;
+    width: 100px;
+    height: 300px;
     background-color: yellow;
     position: absolute;
     left: 300px;
-    top: 200px;
+    top: 150px;
     z-index: 0;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-content: center;
     align-items: center;
+}
+.opcao1{
+    font-family: Arial, Helvetica, sans-serif;
+    font-stretch: semi-condensed;
+}
+.opcao2{
+    font-family: Arial, Helvetica, sans-serif;
+    font-stretch: semi-condensed;
+    color: aliceblue;
 }
