--- a/style.css
+++ b/style.css
@@ -38,8 +38,8 @@ body{
     height: 300px;
     background-color: yellow;
     position: absolute;
-    left: 300px;
-    top: 150px;
+    left: 290px;
+    top: -220px;
     z-index: 0;
     display: flex;
     flex-direction: column;
@@ -51,8 +51,25 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     font-stretch: semi-condensed;
 }
+.opcao1:hover{
+    font-size: 20px;
+}
 .opcao2{
     font-family: Arial, Helvetica, sans-serif;
     font-stretch: semi-condensed;
     color: aliceblue;
+}
+.opcao2:hover{
+    font-size: 25px;
+}
+.deslizar{
+    animation: descer 5s;
+}
+@keyframes descer {
+    0% {
+        top: -220px;
+        }
+    100%{
+        top: 90px;
+    }
 }
