--- a/style.css
+++ b/style.css
@@ -40,6 +40,37 @@ body{
     position: absolute;
     left: 290px;
     top: -220px;
+    border-radius: 10px 10px 10px 10px;
+    z-index: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-content: center;
+    align-items: center;
+}
+.menu2{
+    width: 100px;
+    height: 300px;
+    background-color: blue;
+    position: absolute;
+    left: 667px;
+    top: -220px;
+    border-radius: 10px 10px 10px 10px;
+    z-index: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-content: center;
+    align-items: center;
+}
+.menu3{
+    width: 100px;
+    height: 300px;
+    background-color: red;
+    position: absolute;
+    left: 1055px;
+    top: -220px;
+    border-radius: 10px 10px 10px 10px;
     z-index: 0;
     display: flex;
     flex-direction: column;
@@ -63,7 +94,7 @@ body{
     font-size: 25px;
 }
 .deslizar{
-    animation: descer 5s;
+    animation: descer 2s forwards;
 }
 @keyframes descer {
     0% {
@@ -71,5 +102,13 @@ body{
         }
     100%{
         top: 90px;
+    }
+}
+.recolher{
+    animation: recolher 2s;
+}
+@keyframes recolher {
+    100%{
+        top: -220px;
     }
 }
